<resources>
    <string name="app_name">Tennis Score Board</string>
    <string name="setup_one_set">1 Set</string>
    <string name="setup_three_sets">3 Sets</string>
    <string name="setup_five_set">5 Sets</string>
    <string name="setup_four_games">4 Games Set</string>
    <string name="setup_six_games">6 Games Set</string>
    <string name="setup_tiebreak">Tiebreak</string>
    <string name="setup_deuce">Deuce</string>
    <string name="setup_deciding_game">Deciding Game</string>
    <string name="setup_deciding_point">Deciding Point</string>
    <string name="setup_serve_first">Bottom Serve</string>
    <string name="setup_receive">Bottom Receive</string>
    <string name="setup_confirm">OK</string>
    <string name="game_back">Back</string>
    <string name="game_reset">Reset</string>
    <string name="score_up">Score Top</string>
    <string name="score_down">Score Bottom</string>
    <string name="score_action">Act</string>
    <string name="main_standalone">Standalone</string>
    <string name="main_wear_mode">Wear Mode</string>
    <string name="game_duration">Duration</string>
    <string name="game_show_result_dalog">Show game result?</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="game_save">Save</string>
    <string name="game_load">Load</string>
    <string name="game_load_or_delete">Load or delete %s ?</string>
    <string name="game_delete">Delete</string>
    <string name="main_menu_new">New Game</string>
    <string name="main_menu_continue">Continue</string>
    <string name="result_defeat">defeated</string>
    <string name="save_file_name">Save File Name</string>
    <string name="input_player_or_group_up">Single or Double Player Group</string>
    <string name="input_vesus">vs.</string>
    <string name="menu_setup_men">Player</string>
    <string name="setup_first_serve">Serve</string>
    <string name="permission_descript">Write Permission required if you want to save result as files.</string>
    <string name="game_select_action">Select action:</string>
    <string name="game_ace">Ace</string>
    <string name="game_second_serve">Second Serve</string>
    <string name="game_double_faults">Double Faults</string>
    <string name="game_unforced_error">Unforced Error</string>
    <string name="game_forehand_winner">Forehand Winner</string>
    <string name="game_backhand_winner">Backhand Winner</string>
    <string name="game_forehand_volley">Forehand Volley Winner</string>
    <string name="game_backhand_volley">Backhand Volley Winner</string>
    <string name="game_foul_to_lose">Foul to lose</string>
    <string name="game_other_winner">Other Winner</string>
    <string name="game_serve_net">Serve Net In</string>
    <string name="menu_setup_stat">Stat</string>
    <string name="stat_first_serve">1st Serve</string>
    <string name="stat_second_serve">2nd Serve</string>
    <string name="stat_first_serve_won">1st Serve Won</string>
    <string name="stat_second_serve_won">2nd Serve Won</string>
    <string name="stat_winner">Winner</string>
    <string name="stat_unforced_error">Unforced Error</string>
    <string name="stat_net_point_won">Net Point Won</string>
    <string name="stat_break_point_won">Break Point Won</string>
    <string name="stat_total_point">Total point</string>
    <string name="stat_all_set">All Sets</string>
    <string name="stat_first_set">First Set</string>
    <string name="stat_second_set">Second Set</string>
    <string name="stat_third_set">Third Set</string>
    <string name="stat_forth_set">Forth Set</string>
    <string name="stat_fifth_set">Fifth Set</string>
    <string name="game_saving">Saving</string>
    <string name="voice_change_purchased">Purchased</string>
    <string name="voice_change_ask_to_buy">Do you want to buy this item?</string>
    <string name="game_voice">Voice</string>
    <string name="game_send_result">Send</string>
    <string name="game_import_file">Import score</string>
    <string name="game_retire">Retire from game</string>
    <string name="main_menu_letsplay">Let\'s Play</string>
    <string name="main_menu_findcourt">Find Court</string>
    <string name="find_court_search">Search</string>
    <string name="find_court_add">Add</string>
    <string name="court_type_hard">Hard</string>
    <string name="court_type_grass">Grass</string>
    <string name="court_type_clay">Clay</string>
    <string name="court_type_all">All</string>
    <string name="add_court_header_name">Name</string>
    <string name="add_court_header_type">Type</string>
    <string name="add_court_header_usage">Usage</string>
    <string name="add_court_header_light">Light</string>
    <string name="add_court_header_courts">Court Num</string>
    <string name="add_court_header_charge">Price</string>
    <string name="add_court_header_maintenance">Maintenance</string>
    <string name="add_court_header_traffic">Traffic</string>
    <string name="add_court_header_parking">Parking</string>
    <string name="court_usage_public">Public</string>
    <string name="court_usage_private">Private</string>
    <string name="court_light_all">All courts</string>
    <string name="court_light_some">Some courts</string>
    <string name="court_light_no">No</string>
    <string name="court_charge_charge">Charge</string>
    <string name="add_court_header_if_charge">Charge</string>
    <string name="court_charge_free">Free</string>
    <string name="add_court_camera">Camera</string>
    <string name="add_court_gallery">Gallery</string>
    <string name="add_court_remove">Remove</string>
    <string name="add_court_select">Select from :</string>
    <string name="add_court_cancel">Cancel</string>
    <string name="add_court_upload_remain">upload remain :</string>
    <string name="add_court_help">Help</string>
    <string name="add_court_help_title">Share court information</string>
    <string name="add_court_help_message">Go to your favorite court nearby your home and take a great picture of the court(Do not take a close-up of people. Try to focus on the court). Make sure the mark(Current Position) in the map is really the court location and fill the current form about this court. Submit your comment of this court. Then you can share this good place! You have 5 time to upload different court\'s information. So don\'t waste it. Thanks for your share!</string>
    <string name="find_court_current_position">Current Position</string>
    <string name="find_court_no_share_courts">No court information nearby your current location. Try to share one!</string>
    <string name="loading">Loading</string>
    <string name="rotate_nighty_degree">90 degree</string>
    <string name="uploading">Uploading</string>
    <string name="find_court_help">It shows all courts around your location. If your location is (Longitude 30, Latitude 30), the search range will be (30 +/- 1) degree. Approximate radius is 157km. </string>
    <string name="find_court_ok">OK</string>
    <string name="find_court_help_title">Show court location</string>
    <string name="find_court_permission_msg">You must agree this permission, or you can not use it.</string>
    <string name="game_forced_error">Forced Error</string>
    <string name="game_record">Voice Record</string>
    <string name="game_voice_on">On</string>
    <string name="game_voice_off">Off</string>
    <string name="file_name_enpty">File name can not be empty.</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="file_is_exist_overwrite">File %s is exist. Overwrite it?</string>
    <string name="load_import">Import</string>
    <string name="import_select_all">Select All</string>
    <string name="import_unselect_all">Unselect All</string>
    <string name="file_import_help_title">Import file</string>
    <string name="file_import_help_msg">Import your sound file. Only "m4a" file will be accepted.</string>
    <string name="voice_gbr_man">GBR (Man)</string>
    <string name="voice_gbr_woman">GBR (Woman)</string>
    <string name="voice_user_record">User Record</string>
    <string name="app_exit">Exit from this app?</string>
    <string name="record_stop">Exit from user voice recording?</string>
    <string name="permission_record">If you want to record voice, you must accept record permission.</string>
    <string name="voice_listen">Listen</string>
    <string name="voice_record">Record</string>
    <string name="file_load_error">Error(s) happened while loading file. It shows the state before broken data.</string>
    <string name="record_file_not_exist">File is not exist. Try to record a new one correspond with the word.</string>
    <string name="record_file_is_exist_over_write">File exist. Overwrite it?</string>
    <string name="record_clear_all">Clear</string>
    <string name="record_clear_all_msg">Clear all voices?</string>
    <string name="voice_import">Import</string>
    <string name="game_voice_off_message">Voice Off</string>
    <string name="game_voice_on_message">Voice On</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_msg_1">In order to protect your privacy, please read carefully the Privacy Policy of Tennis Score Board Applications listed below.</string>
    <string name="privacy_msg_2">I. Collection, Use and Modification of Personal Information</string>
    <string name="privacy_msg_3">\n1.Collection of Personal Information\n   You must provide device permission , include camera ,album storage. in order to save statistics as files. And you must also provide the record permission to record your sounds.  </string>
    <string name="privacy_msg_4">\n2.Use of Personal Information\n   Files saved and sounds recorded in this app are processed and stored only in your personal device and will not be uploaded to any other location. </string>
    <string name="privacy_msg_5">\n3.Modification of Personal Information\n   You can delete all files and sounds in this app.</string>
    <string name="privacy_msg_6">II. Disclosure of your personal information</string>
    <string name="privacy_msg_7">\nTennis Score Board APP would not collect any personal information or uploaded any personal information of your device.</string>
    <string name="agree_privacy_policy">I agree to the term of services and privacy policy.</string>
    <string name="setup_supertiebreak">Super Tiebreak</string>
    <string name="setup_help">Help</string>
    <string name="setup_help_msg_deciding_game">Deciding Game: In a set of 6 games, win 6 games first will win this set.</string>
    <string name="setup_help_msg_super_tiebreak">Super Tiebreak: Super Tiebreak is a 10 points set in final set. In order to make the game goes more quickly.</string>
    <string name="setup_help_msg_deciding_point">Deciding Point: When a game comes to 40:40, who win next point will win this game.</string>
    <string name="setup_long_game">Long Game</string>
    <string name="setup_help_msg_long_game">Long Game: Long Game is the deciding set that games comes to 5:5. Who take two straight games will win this match.</string>
    <string name="inapp_buy_wait">In-App buying progress is busy. Please retry in a few seconds.</string>
    <string name="saving">Saving...</string>
    <string name="game_forehand_lob">Forehand Lob Shot</string>
    <string name="game_backhand_lob">Backhand Lob Shot</string>
    <string name="game_lob_shot">Lob Shot</string>
    <string name="game_forehand_drop">Forehand Drop</string>
    <string name="game_backhand_drop">Backhand Drop</string>
    <string name="game_drop_shot">Drop Shot</string>
</resources>

