<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.seventhmoon.tennisscoreboard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewPrivacy1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_1"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewPrivacy2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_2"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColorLink="@android:color/holo_blue_dark" />

                    <TextView
                        android:id="@+id/textViewPrivacy3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_3"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewPrivacy4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_4"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewPrivacy5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_5"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textViewPrivacy6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_6"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColorLink="@android:color/holo_blue_dark" />

                    <TextView
                        android:id="@+id/textViewPrivacy7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_msg_7"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>


        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/agree_privacy_policy"
            android:id="@+id/checkboxAgree"
            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:text="@string/confirm"
        android:id="@+id/btnPolicyConfirm"/>



    <!--LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/main_menu_new"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnNewGame"
            android:layout_weight="1"
            android:textSize="50sp"/>

        <Button
            android:text="@string/main_menu_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnContinue"
            android:layout_weight="1"
            android:textSize="50sp"/>
    </LinearLayout-->
</LinearLayout>
